# portal-frontend

./: .gitignore  AGENT_AB_TESTING.md  AGENT_INTEGRATION_GUIDE.md  ANNIVERSARY_BILLING.md  API_ENDPOINTS.md  API_ENDPOINTS_DOCUMENTATION.md  BACKEND_DEPLOYMENT_COMPLETE.md  BILLING_EXPLANATION.md  BILLING_SYSTEM.md  CALL_DURATION_STATUS.md  CLOUDFLARE_FIX.md  DEBUG_EMAIL_NOTIFICATIONS.md  DEPLOY_AGENT_TYPE.md  DEPLOY_RECORDING_FIX.md  DEVELOPER_SETUP_GUIDE.md  Dockerfile  EMAIL_FIX_SUMMARY.md  FIX_CALL_DURATION_FILTER.md  FIX_RECORDING_CROSS_CONTAMINATION.md  FIX_RECORDING_MIXUPS.md  GOCARDLESS_MANDATE_IMPLEMENTATION.md  GOCARDLESS_SETUP_GUIDE.md  GOCARDLESS_WEBHOOK_SETUP.md  Infinity-Partnership-Presentation.md  LIVEKIT_WIDGET_GUIDE.md  MESSAGING_FEATURES_IMPLEMENTATION.md  META_SETUP_GUIDE.md  Newreceptionmateagent.py  ONBOARDING_API.md  ONBOARDING_PROCESS.md  README.md  RECORDING_CROSSOVER_FIX_DEPLOYED.md  RECORDING_FIX_DEPLOYED.md  RECORDING_ISSUE_ANALYSIS.md  REPORTS_IMPLEMENTATION.md  ReceptionMate_Complete_API.postman_collection.json  ReceptionMate_Onboarding_API.postman_collection.json  ReceptionMate_Production.postman_environment.json  ReceptionMate_Test.postman_environment.json  SERVICE_EXPERT_INTEGRATION.md  (+41 more)
agent-tyresoft/: .secrets.example  Dockerfile  Products Branch 1.csv  Products Branch 2.csv  Services.csv  TyreSoft_Test_Bookings_Summary.xlsx  Tyresoftsupervisor_receptionmate.py  Tyresoftsupervisor_receptionmate.py.bak  Tyresoftsupervisor_receptionmate.py.bak2  Tyresoftsupervisor_receptionmate.py.bak3  Tyresoftsupervisor_receptionmate.py.bak4  agent_infra.py  (+12 more)
(+610 files in other folders)
